force-app/main/default/objects/Lead/fields/Approx_Debt_EDD__c.field-meta.xml
<CustomField>
    <fullName>Approx_Debt_EDD__c</fullName>
    <description>Field comes from Facebook for Everyday Debt</description>
    <label>Approx Debt EDD</label>
    <length>200</length>
    <type>Text</type>
</CustomField>