force-app/main/default/objects/Lead/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <formula>IF(
  LEFT(Phone, 2) = &quot;+1&quot;,
  MID(Phone, 3, 3),
  IF(
    LEFT(Phone, 1) = &quot;1&quot;,
    MID(Phone, 2, 3),
    IF(
      LEFT(Phone, 1) = &quot;(&quot;,
      MID(Phone, 2, 3),
      LEFT(Phone, 3)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Code</label>
    <type>Text</type>
</CustomField>