force-app/main/default/objects/Lead/fields/Assignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Notes__c</fullName>
    <description>Notes about the assignment process for audit trail</description>
    <inlineHelpText>Additional information about how this lead was assigned</inlineHelpText>
    <label>Assignment Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>