force-app/main/default/objects/Lead/fields/Black_Listed__c.field-meta.xml
<CustomField>
    <fullName>Black_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Black Listed?</label>
    <type>Checkbox</type>
</CustomField>