force-app/main/default/objects/Lead/fields/Business_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_date__c</fullName>
    <label>Business Start date</label>
    <type>Date</type>
</CustomField>