force-app/main/default/objects/Lead/fields/Call_Back_Required__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Back Required</label>
    <type>Checkbox</type>
</CustomField>