force-app/main/default/objects/Lead/fields/Campaign_Brand__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Brand__c</fullName>
    <label>Campaign Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debtifi</fullName>
            </value>
            <value>
                <fullName>QRMCA</fullName>
            </value>
            <value>
                <fullName>Debt Crusaders</fullName>
            </value>
            <value>
                <fullName>Debt Consultants Group</fullName>
            </value>
            <value>
                <fullName>Everyday Debt</fullName>
            </value>
            <value>
                <fullName>Next Day Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>