force-app/main/default/objects/Lead/fields/Chaser__c.field-meta.xml
<CustomField>
    <fullName>Chaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chaser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>