force-app/main/default/objects/Lead/fields/Cherry_Box__c.field-meta.xml
<CustomField>
    <fullName>Cherry_Box__c</fullName>
    <label>Cherry Box</label>
    <length>20</length>
    <type>Text</type>
</CustomField>