force-app/main/default/objects/Lead/fields/Contact_person__c.field-meta.xml
<CustomField>
    <fullName>Contact_person__c</fullName>
    <label>Contact person</label>
    <length>84</length>
    <type>Text</type>
</CustomField>