force-app/main/default/objects/Lead/fields/Convoso__c.field-meta.xml
<CustomField>
    <fullName>Convoso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Convoso?</label>
    <type>Checkbox</type>
</CustomField>