force-app/main/default/objects/Lead/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALBANY COUNTY</fullName>
            </value>
            <value>
                <fullName>CLINTON COUNTY</fullName>
            </value>
            <value>
                <fullName>ERIE COUNTY</fullName>
            </value>
            <value>
                <fullName>KINGS COUNTY</fullName>
            </value>
            <value>
                <fullName>MONROE COUNTY</fullName>
            </value>
            <value>
                <fullName>NASSAU COUNTY</fullName>
            </value>
            <value>
                <fullName>NEW YORK COUNTY</fullName>
            </value>
            <value>
                <fullName>NIAGARA COUNTY</fullName>
            </value>
            <value>
                <fullName>ONEIDA COUNTY</fullName>
            </value>
            <value>
                <fullName>ONTARIO COUNTY</fullName>
            </value>
            <value>
                <fullName>ORANGE COUNTY</fullName>
            </value>
            <value>
                <fullName>QUEENS COUNTY</fullName>
            </value>
            <value>
                <fullName>ROCKLAND COUNTY</fullName>
            </value>
            <value>
                <fullName>SUFFOLK COUNTY</fullName>
            </value>
            <value>
                <fullName>SULLIVAN COUNTY</fullName>
            </value>
            <value>
                <fullName>TOMPKINS COUNTY</fullName>
            </value>
            <value>
                <fullName>WARREN COUNTY</fullName>
            </value>
            <value>
                <fullName>WASHINGTON COUNTY</fullName>
            </value>
            <value>
                <fullName>WESTCHESTER COUNTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>