force-app/main/default/objects/Lead/fields/Desired_Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Desired_Weekly_Payment__c</fullName>
    <label>Desired Weekly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>