force-app/main/default/objects/Lead/fields/Docs_links__c.field-meta.xml
<CustomField>
    <fullName>Docs_links__c</fullName>
    <label>Docs links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>