force-app/main/default/objects/Lead/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark the lead as Duplicate</inlineHelpText>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>