force-app/main/default/objects/Lead/fields/EmailOpp__c.field-meta.xml
<CustomField>
    <fullName>EmailOpp__c</fullName>
    <label>EmailOpp</label>
    <type>Email</type>
</CustomField>