force-app/main/default/objects/Lead/fields/Est_Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_Debt__c</fullName>
    <label>Estimated Total Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>