force-app/main/default/objects/Lead/fields/Estimated_Current_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Current_Payment__c</fullName>
    <description>The sum of the weekly payments of creditor lists</description>
    <label>Estimated Current Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>