force-app/main/default/objects/Lead/fields/Fronter__c.field-meta.xml
<CustomField>
    <fullName>Fronter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fronter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>