force-app/main/default/objects/Lead/fields/Full_URL__c.field-meta.xml
<CustomField>
    <fullName>Full_URL__c</fullName>
    <label>Full URL</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>