force-app/main/default/objects/Lead/fields/Gclid__c.field-meta.xml
<CustomField>
    <fullName>Gclid__c</fullName>
    <description>Gclid codes can be long and contain mixed characters. Use a long-form Text field to be safe.</description>
    <label>Gclid</label>
    <type>TextArea</type>
</CustomField>