force-app/main/default/objects/Lead/fields/Integration_Assignement__c.field-meta.xml
<CustomField>
    <fullName>Integration_Assignement__c</fullName>
    <label>Integration Assignement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZAP Everyday</fullName>
            </value>
            <value>
                <fullName>CSEP</fullName>
            </value>
            <value>
                <fullName>ZAP Marketting</fullName>
            </value>
            <value>
                <fullName>ZAP EDD Lawsuite</fullName>
            </value>
            <value>
                <fullName>ZAP YP Health</fullName>
            </value>
            <value>
                <fullName>ZAP YP Construction</fullName>
            </value>
            <value>
                <fullName>ZAP YP Restaurant</fullName>
            </value>
            <value>
                <fullName>ZAP YP Retail</fullName>
            </value>
            <value>
                <fullName>ZAP Mack Blast</fullName>
            </value>
            <value>
                <fullName>ZAP PACK</fullName>
            </value>
            <value>
                <fullName>Coeff DV INB</fullName>
            </value>
            <value>
                <fullName>Coeff DV AP</fullName>
            </value>
            <value>
                <fullName>Coeff DV Packs</fullName>
            </value>
            <value>
                <fullName>Coeff DV Legal</fullName>
            </value>
            <value>
                <fullName>ZAP RE RR D</fullName>
            </value>
            <value>
                <fullName>ZAP Legal Scaper Debtifi</fullName>
            </value>
            <value>
                <fullName>ZAP Marketing DC</fullName>
            </value>
            <value>
                <fullName>ZAP Debtifi Albert</fullName>
            </value>
            <value>
                <fullName>ZAP Marketting QRMCA</fullName>
            </value>
            <value>
                <fullName>ZAP NY Legal Scraper New</fullName>
            </value>
            <value>
                <fullName>ZAP DCG Marketing</fullName>
            </value>
            <value>
                <fullName>ZAP WOD</fullName>
            </value>
            <value>
                <fullName>ZAP RTC</fullName>
            </value>
            <value>
                <fullName>ZAP DLGL APP</fullName>
            </value>
            <value>
                <fullName>ZAP Quiz DC</fullName>
            </value>
            <value>
                <fullName>ZAP RR EDD AR</fullName>
            </value>
            <value>
                <fullName>ZAP RR Cherry DC</fullName>
            </value>
            <value>
                <fullName>ZAP Quiz QRMCA</fullName>
            </value>
            <value>
                <fullName>ZAP Quiz DCG</fullName>
            </value>
            <value>
                <fullName>ZAP Quiz Debtifi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>