force-app/main/default/objects/Lead/fields/Labels__c.field-meta.xml
<CustomField>
    <fullName>Labels__c</fullName>
    <label>Labels</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW LEAD</fullName>
                <default>true</default>
                <label>NEW LEAD</label>
            </value>
            <value>
                <fullName>WARM LEAD</fullName>
            </value>
            <value>
                <fullName>1ST ATTEMPT</fullName>
            </value>
            <value>
                <fullName>2ND ATTEMPT</fullName>
            </value>
            <value>
                <fullName>3RD ATTEMPT</fullName>
            </value>
            <value>
                <fullName>CALL BACK</fullName>
            </value>
            <value>
                <fullName>NO ANSWER</fullName>
            </value>
            <value>
                <fullName>NOT INTERESTED</fullName>
            </value>
            <value>
                <fullName>NOT QUALIFIED</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>BAD LEAD</fullName>
            </value>
            <value>
                <fullName>Cold Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>