force-app/main/default/objects/Lead/fields/Law_suite_occured__c.field-meta.xml
<CustomField>
    <fullName>Law_suite_occured__c</fullName>
    <label>Law suite occured Date</label>
    <type>Date</type>
</CustomField>