force-app/main/default/objects/Lead/fields/Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Lawyer__c</fullName>
    <label>Lawyer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>