force-app/main/default/objects/Lead/fields/Lead_Expired__c.field-meta.xml
<CustomField>
    <fullName>Lead_Expired__c</fullName>
    <formula>NOW() - CreatedDate &gt; (48/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Expired</label>
    <type>Checkbox</type>
</CustomField>