force-app/main/default/objects/Lead/fields/Lead_Level__c.field-meta.xml
<CustomField>
    <fullName>Lead_Level__c</fullName>
    <label>Lead Level</label>
    <length>64</length>
    <type>Text</type>
</CustomField>