force-app/main/default/objects/Lead/fields/Lead_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Phone__c</fullName>
    <formula>RIGHT(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              SUBSTITUTE(
                IF(ISBLANK(Owner:User.Phone), Owner:User.MobilePhone, Owner:User.Phone),
                &quot;(&quot;, &quot;&quot;
              ),
              &quot;)&quot;, &quot;&quot;
            ),
            &quot;-&quot;, &quot;&quot;
          ),
          &quot; &quot;, &quot;&quot;
        ),
        &quot;+&quot;, &quot;&quot;
      ),
      &quot;.&quot;, &quot;&quot;
    ),
    10
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Phone</label>
    <type>Text</type>
</CustomField>