force-app/main/default/objects/Lead/fields/Lead_Source_EDD__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_EDD__c</fullName>
    <label>Lead Source EDD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Cherry DC</fullName>
            </value>
            <value>
                <fullName>CH Referral</fullName>
            </value>
            <value>
                <fullName>Convoso</fullName>
            </value>
            <value>
                <fullName>DCGDI</fullName>
            </value>
            <value>
                <fullName>DCG DI</fullName>
            </value>
            <value>
                <fullName>Diamond Quiz</fullName>
            </value>
            <value>
                <fullName>EDD30</fullName>
            </value>
            <value>
                <fullName>EDD Di</fullName>
            </value>
            <value>
                <fullName>Everyday Email Drip</fullName>
            </value>
            <value>
                <fullName>Everyday Form</fullName>
            </value>
            <value>
                <fullName>FA Referral Reblast</fullName>
            </value>
            <value>
                <fullName>FB Intent</fullName>
            </value>
            <value>
                <fullName>FB Volume</fullName>
            </value>
            <value>
                <fullName>FS Form</fullName>
            </value>
            <value>
                <fullName>GFG Referral</fullName>
            </value>
            <value>
                <fullName>JJ AP</fullName>
            </value>
            <value>
                <fullName>JJ Legal</fullName>
            </value>
            <value>
                <fullName>JJ Live</fullName>
            </value>
            <value>
                <fullName>JJ PACK</fullName>
            </value>
            <value>
                <fullName>JJ SBA</fullName>
            </value>
            <value>
                <fullName>JJ WAP</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>LL AP</fullName>
            </value>
            <value>
                <fullName>LL Form</fullName>
            </value>
            <value>
                <fullName>LS Referral</fullName>
            </value>
            <value>
                <fullName>NY Legal Scaper</fullName>
                <label>NY Legal Scraper</label>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>PC Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>