force-app/main/default/objects/Lead/fields/Lender_1__c.field-meta.xml
<CustomField>
    <fullName>Lender_1__c</fullName>
    <label>Lender 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>