force-app/main/default/objects/Lead/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>File Links</label>
    <type>Url</type>
</CustomField>