force-app/main/default/objects/Lead/fields/Litigator__c.field-meta.xml
<CustomField>
    <fullName>Litigator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Litigator</label>
    <type>Checkbox</type>
</CustomField>