force-app/main/default/objects/Lead/fields/Main_Source__c.field-meta.xml
<CustomField>
    <fullName>Main_Source__c</fullName>
    <formula>IF(
    /* 1) If UTM Source is populated */
    NOT(ISBLANK(utm_source__c)),
    utm_source__c &amp; &quot; &quot; &amp; TEXT(Campaign_Brand__c),

    /* 2) Else, pick by Sales_Office__c */
    IF(
        Sales_Office__c = &quot;Everyday Debt&quot;,
        IF(
            NOT(ISBLANK(TEXT(Lead_Source_EDD__c))),
            TEXT(Lead_Source_EDD__c) &amp; &quot; &quot; &amp; TEXT(Campaign_Brand__c),
            TEXT(Source__c)         &amp; &quot; &quot; &amp; TEXT(Campaign_Brand__c)
        ),
        IF(
            Sales_Office__c = &quot;Next Day Settlement&quot;,
            IF(
                NOT(ISBLANK(TEXT(Lead_Source_Debtifi__c))),
                TEXT(Lead_Source_Debtifi__c) &amp; &quot; &quot; &amp; TEXT(Campaign_Brand__c),
                TEXT(Source__c)              &amp; &quot; &quot; &amp; TEXT(Campaign_Brand__c)
            ),
            IF(
                Sales_Office__c = &quot;Debt Crusaders&quot;,
                IF(
                    NOT(ISBLANK(TEXT(Lead_Source_DC__c))),
                    TEXT(Lead_Source_DC__c) &amp; &quot; &quot; &amp; TEXT(Campaign_Brand__c),
                    TEXT(Source__c)        &amp; &quot; &quot; &amp; TEXT(Campaign_Brand__c)
                ),
                /* Default for any other office */
                TEXT(Source__c) &amp; &quot; &quot; &amp; TEXT(Campaign_Brand__c)
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Source</label>
    <type>Text</type>
</CustomField>