force-app/main/default/objects/Lead/fields/Mobile_Backup__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Backup__c</fullName>
    <label>Mobile Backup</label>
    <type>Phone</type>
</CustomField>