force-app/main/default/objects/Lead/fields/Mod2EDDLaw__c.field-meta.xml
<CustomField>
    <fullName>Mod2EDDLaw__c</fullName>
    <formula>MOD(VALUE(Number__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mod2EDDLaw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>