force-app/main/default/objects/Lead/fields/ModOf2_Debtifi__c.field-meta.xml
<CustomField>
    <fullName>ModOf2_Debtifi__c</fullName>
    <formula>MOD(VALUE(Number__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModOf2(Debtifi)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>