force-app/main/default/objects/Lead/fields/ModOf4__c.field-meta.xml
<CustomField>
    <fullName>ModOf4__c</fullName>
    <description>This is for Everyday Debt</description>
    <formula>MOD(VALUE(Number__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModOf2EDD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>