force-app/main/default/objects/Lead/fields/Name_2__c.field-meta.xml
<CustomField>
    <fullName>Name_2__c</fullName>
    <label>Name#2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>