force-app/main/default/objects/Lead/fields/Name_Ref__c.field-meta.xml
<CustomField>
    <fullName>Name_Ref__c</fullName>
    <label>Name Ref</label>
    <length>84</length>
    <type>Text</type>
</CustomField>