force-app/main/default/objects/Lead/fields/No_Response__c.field-meta.xml
<CustomField>
    <fullName>No_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Response</label>
    <type>Checkbox</type>
</CustomField>