force-app/main/default/objects/Lead/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>